--- a/web/public/index.html
+++ b/web/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
     <!-- <script src="https://apis.mapmyindia.com/advancedmaps/v1/mz9bmsaey5bcdukb8zr1d7pgp9gp8cm6/map_load?v=1.3"></script> -->
-    <link href='pk.eyJ1Ijoic29uYWxpLXNpbmdoIiwiYSI6ImNrb2R1aGxhMDA1eDcyb3FnMDZhemNhOGwifQ.pfXWKE9Q-U1Pe_tM5-eMnw' rel='stylesheet' />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+ <!-- <link href='pk.eyJ1Ijoic29uYWxpLXNpbmdoIiwiYSI6ImNrb2R1aGxhMDA1eDcyb3FnMDZhemNhOGwifQ.pfXWKE9Q-U1Pe_tM5-eMnw' rel='stylesheet' /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
